# BettaPay-Contract

./: Cargo.toml  Makefile  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
governance_contract/src/: anchor_auth_tests.rs  anchor_removal_test.rs  lib.rs
governance_contract/test_snapshots/tests/: admin_functions_work_while_paused.1.json  updates_system_parameters.1.json  upsert_anchor_fails_when_paused.1.json
lib/hooks/: types.ts  useNotify.ts
scripts/: deploy_testnet.sh  simulate.sh
settlement_contract/src/: lib.rs
settlement_contract/test_snapshots/tests/: accepts_default_rule_at_settlement_delay_maximum.1.json  accepts_default_rule_with_valid_settlement_delay.1.json  accepts_fee_sum_at_exactly_10000_bps.1.json  accepts_settlement_delay_at_maximum_boundary.1.json  accepts_valid_minimum_amount.1.json  accepts_valid_settlement_delay_one.1.json  accepts_valid_settlement_delay_zero.1.json  admin_clears_custom_rule.1.json  calculate_fee_split_extends_default_rule_ttl_on_read.1.json  calculate_fee_split_uses_custom_rule_parameters.1.json  calculates_split_without_storing_reference.1.json  clearing_rule_falls_back_to_defaults.1.json  clearing_rule_falls_back_to_global_default.1.json  emits_event_on_admin_transfer.1.json  emits_structured_event_when_unregistering_merchant.1.json  emits_structured_event_when_updating_rule.1.json  executes_contract_wasm_upgrade_successfully.1.json  explicit_merchant_rule_overrides_global_default.1.json  extends_ttl_when_updating_settlement_rule.1.json  gets_payments_in_batches.1.json  (+18 more)
